# homebank-converter

./: Cargo.toml  Makefile  README.md
.github/workflows/: build.yml  test.yml
src/: main.rs
src/bank/: bawag.rs  homebank.rs  mod.rs
src/cli/: mod.rs
src/config/: error.rs  hocon.rs  mod.rs
src/data/: error.rs  mod.rs
test-data/: bawag.csv  cfg.conf
