[package]
name = "hombank-converter"
version = "0.1.0"
authors = ["Stefan Puchmann <spucman.dev@gmail.com>"]
edition = "2018"

[dependencies]
csv = "=1.1.6"
chrono = "=0.4.19"
clap = "=3.1.18"
thiserror = "=1.0.31"
hocon = { version = "=0.9.0", default-features = false, features = ["serde-support"] }
log = "=0.4.17"
fern = "=0.6.1"
serde = {version = "=1.0.137", features = ["derive"] }
home = "=0.5.3"